--- a/js_version/index.html
+++ b/js_version/index.html
@@ -6,8 +6,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.js"></script>
     <!-- Load ml5.js -->
     <script src="https://unpkg.com/ml5@0.1.2/dist/ml5.min.js" type="text/javascript"></script>
+    <!-- Load osc web -->
+    <script src="bower_components/osc.js/dist/osc-browser.min.js"></script>
     <!-- Load sketch -->
-    <script src="./invisible_theremin.js"></script>
+    <script src="./invisible_theremin_osc.js"></script>
  </head>
 
   <body>
